Change Community & Outreach
For mobile website accessibility

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<ul>
 								<li><a href="#aboutme">About Me</a></li>
 								<li><a href="#research">Research</a></li>
-								<li><a href="#community">Community and Outreach</a></li>
+								<li><a href="#community">Outreach</a></li>
                                 <li><a href="#photos">Photos</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -92,7 +92,7 @@
 
 						<!-- community -->
 							<article id="community">
-								<h2 class="major">Community and Outreach</h2>
+								<h2 class="major">Outreach</h2>
                                 <span class="image right">
                                     <img src="images/billy_in_spain.jpg" alt=""/><br>
                                     <!--<figcaption><font size=2>[Presenting at the Institute of Cosmos Sciences in Barcelona.]</font></figcaption>-->
