hike1 reference fixed

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                     </span>
                                     <h4>Hikes -- 2022</h4>
                                     <span class="image main">
-                                        <img src="images/photos/hike1.jpg" alt="" />
+                                        <img src="images/photos/hike1.JPG" alt="" />
                                         <!--<figcaption><font size=2>[An alumni catching up with his juniors on the Iceline trail (Yoho National park, BC). Aug 2022.]</font></figcaption>-->
                                     </span>
                                     <h4>Yellowstone -- 2022</h4>
