--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 			gtag('config', 'G-6L5CD9TL89');
 		</script>
-		<title>KTBSievers</title>
+		<title>KTBSievers-webpage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,9 +36,13 @@
                                 <p>(formerly KTB Chan)</p>
                                 <img src="images/profilePics.jpg" style="width:280px; height:280px; object-fit: cover;">
                                 <p>PhD Student (starting Sept 2023)<br>
-                                Dept. of Physics and Astronomy<br>
+                               	Dept. of Physics and Astronomy<br>
                                 McMaster University
                                 </p>
+				<p>
+				<a href="images/CV_Billy_Sievers.pdf" target="_blank">Curriculum Vitae</a><br>
+				<a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=Chan%2C+K+T+B&terms-0-field=author&terms-1-operator=OR&terms-1-term=Sievers%2C+K+T+B&terms-1-field=author&classification-physics_archives=all&classification-include_cross_list=include&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=show&size=50&order=-announced_date_first" target="_blank">Publications</a><br>
+				</p>
 							</div>
 						</div>
 						<nav>
