--- a/index.html
+++ b/index.html
@@ -164,15 +164,12 @@
                                 or<br>
                                 <b>ktbsievers at gmail dot com (personal)</b></p>
 								<ul class="icons">
-									<li><a target="_blank"
-                                        href="https://twitter.com/billnine2"
-                                        class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a target="_blank"
-                                        href="https://www.facebook.com/kamtobillychan/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a target="_blank"
-                                        href="https://www.instagram.com/bill.nine2/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<!--<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
-                                </ul>
+								<li><a target="_blank" href="https://twitter.com/ktbsievers" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a target="_blank" href="https://www.facebook.com/ktbsievers" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a target="_blank" href="https://github.com/billnine2" class="icon brands fa-github"><span class="label">GitHub</span></a></li>		
+								<li><a target="_blank" href="https://www.linkedin.com/in/ktbsievers/" class="icon brands fa-instagram"><span class="label">LinkedIn</span></a></li>
+
+                                				</ul>
 							</article>
 
 						<!-- Elements -->
