--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<h1>Kam To Billy Sievers</h1>
                                 <p>(formerly KTB Chan)</p>
                                 <img src="images/profilePics.jpg" style="width:280px; height:280px; object-fit: cover;">
-                                <p>PhD Student (starting Sept 2023)<br>
+                                <p>PhD Student<br>
                                	Dept. of Physics and Astronomy<br>
                                 McMaster University
                                 </p>
